Changelog
=========

1.7.6 - Unreleased
------------------

- Style social buttons on user author page.
  [Vitaliy Podoba]

- Add external user homepage link to user profile page.
  [Vitaliy Podoba]

- Adjust notification template and inline style. [8085].
  [Cesar Gonzalez]

- Change template for sendto [8084].
  [Marcin Staniszczak]


1.7.5 - October 24, 2013
------------------------

- Add columns classes to Anonymous Welcome Page.
  [Vitaliy Podoba]

- Fixes portal mode menu and user dropdown.
  [Cesar Gonzalez]

- Sets anon action menu position. Columns content using max width from
  container. Removes portlet separator line.
  [Cesar Gonzalez]

- Fixes centering carousel. Limit header and content to 1200px.
  [Cesar Gonzalez]

- Fixes circle user image.
  [Cesar Gonzalez]

- Fixes bug in dashlet portlet.
  [Jose Dinuncio]

- Adds style to site header and change template.
  [Cesar Gonzalez]

- Removes update step and jquery.selectbox pluging.
  [Cesar Gonzalez]

- Adds style to anonymous homepage. Fixes admin column style.
  [Cesar Gonzalez]

- Update Anonymous homepage view [8579].
  [Vitaliy Podoba]

- Adds Site Setup add-on configuration for Anonymous Homepage [8578].
  [Jose Dinuncio]

- Disable zimbra-mail-portlet-view from theme. Fixes History.txt.
  [Cesar Gonzalez]

- Fixes license and adds AUTHORS.txt.
  [Jose Dinuncio]

- Fixes keyword livesearch tooltip arrow position.
  [Cesar Gonzalez]

- Adds tooltip with description of keyword livesearch support [8045].
  [Cesar Gonzalez]

- Adds livesearch support for keyword searchs (user: and type:) [8045].
  [Jose Dinuncio]

- Changes in users portled: changed a image sizes, and added a tooltip
  with user details [8046].
  [Marcin Staniszczak]

- Fixes strange icons in list view, standard view and search result list [8349].
  [Cesar Gonzalez]

- Fixes behaviour of the button *>* that makes the portlet wider.
  [Cesar Gonzalez]

- Adds custom event handler for portlet deferred loading complete event then