@@ -40,13 +40,9 @@ setup(name='vnccollab.theme',
           'z3c.jbot',
           'tldextract',
           'Products.AdvancedQuery',
-          'collective.xmpp.chat',
           'plone.api',
           'plone.app.jquery',
           'plone.app.jquerytools',
-          'jarn.xmpp.core',
-          'jarn.jsi18n',
-          'jarn.xmpp.collaboration',
           'collective.js.jqueryui',
           'collective.plonetruegallery',
           'collective.z3cform.datepicker',
