@@ -364,493 +364,6 @@ function attachNewTicketAction() {
   });
 }
 
-var vncStreamLoading = false;
-var vncStreamDelay = 10000;
-
-function checkVNCStream() {
-  // request is already in process
-  if (vncStreamLoading == true) {
-    return false;
-  }
-
-  // mark request busy
-  vncStreamLoading = true;
-
-  var stream = jq('#vnc-stream');
-  if (stream.length == 0) {
-    vncStreamLoading = false;
-    return false;
-  }
-
-  // find first item in the stream
-  var item = jq('.vncStreamItem:first', stream);
-  var data = {};
-  if (item.length > 0) {
-    data = {'since': item.find('.dt').text(),
-      'uid': item.find('.uid').text()};
-  }
-
-  // do ajax request to the server to get fresh stream items
-  jq.ajax({
-    'type': 'GET',
-    'dataType': 'html',
-    'url': portal_url + '/@@vnc-stream-check',
-    'data': data,
-    'success': function(data){
-      if (item.length > 0) {
-        item.before(data);
-      } else {
-        jq('.vncStreamBodyItems', stream).append(data);
-      }
-
-      // if stream is visible: mark STREAM icon as read
-      if (stream.is(':visible')) {
-        jq('#unread-message').remove();
-        jq('#site-stream-link').removeClass('newStreamMessage');
-      }
-
-      vncStreamLoading = false;
-      setTimeout(checkVNCStream, vncStreamDelay);
-    },
-    'error': function(){
-      vncStreamLoading = false;
-      setTimeout(checkVNCStream, vncStreamDelay);
-    }
-  });
-
-  return true;
-}
-
-function attachStreamButton() {
-  // xmpp Messages onclick load stream from the server
-  // do we need to load it from the server?
-  jq('#site-stream-link').click(function(event){
-    var stream = jq('#vnc-stream');
-    if (stream.length == 0) {
-      // it's already being loaded
-      if (vncStreamLoading) {
-        return false;
-      }
-
-      // load from the server
-      vncStreamLoading = true;
-
-      // add spinner
-      if (jq('#xmpp-viewlet-container .spinner').length == 0) {
-        jq('#xmpp-viewlet-container').prepend('<span class="spinner">' +
-          '<img src="' + portal_url + '/dots-white.gif" /></span>');
-      } else {
-        jq('#xmpp-viewlet-container .spinner').show();
-      }
-
-      jq.ajax({
-        'url': portal_url + '/@@vnc-stream',
-        'dataType': 'html',
-        'success': function(data, textStatus, jqXHR){
-          jq('#portal-top').append(data);
-          attachStreamActions();
-          $chat = $('#vnc-chat')
-          if (isVncChatVisible()) {
-              $chat.hide();
-          } else {
-            jq('#vnc-stream').hide().slideDown();
-            // mark stream icon as read
-            jq('#unread-message').remove();
-            jq('#site-stream-link').removeClass('newStreamMessage');
-          }
-          // attach slim scrolling
-          jq('.vncStreamBodyItems:not(.noSlimScroll)').slimScroll({
-            'height': '293px'});
-          vncStreamLoading = false;
-          // remove spinner
-          jq('#xmpp-viewlet-container .spinner').hide();
-          setTimeout(checkVNCStream, vncStreamDelay);
-        },
-        'error': function() {
-          // TODO: make smart alert only when something really goes wrong
-          //       Now we get alerts even when user reloads page before ajax
-          //       call hasn't finished
-          // alert('Sorry, something went wrong on the server. Please, try ' +
-          //   'a bit later.');
-          vncStreamLoading = false;
-          // remove spinner
-          jq('#xmpp-viewlet-container .spinner').hide();
-          setTimeout(checkVNCStream, vncStreamDelay);
-        },
-        'data': {}
-        });
-    } else if (stream.is(':visible')) {
-      stream.slideUp();
-    } else {
-      $chat = $('#vnc-chat')
-      if (isVncChatVisible()) {
-        $chat.hide();
-        stream.show();
-      } else {
-        stream.slideDown();
-      }
-      // mark stream icon as read
-      jq('#unread-message').remove();
-      jq('#site-stream-link').removeClass('newStreamMessage');
-    }
-    return false;
-  });
-}
-
-function attachStreamActions() {
-  // attach stream tabs clicks
-  var tabs = jq('#vnc-stream .vncStreamTabs');
-  if (tabs.length > 0) {
-    jq('a', tabs).click(function(event){
-      var target = jq(event.target);
-      var parent = target.parents('li');
-      var klass = parent.attr('id').slice('stream-type-'.length-1);
-
-      // change tabs class to display only filtered stream items
-      target.parents('.vncStreamMsgs').removeClass().addClass("vncStreamMsgs " +
-        klass);
-
-      // add selected class to current tab
-      parent.parent().find('li').removeClass('selected');
-      parent.addClass('selected');
-
-      return false;
-    });
-  };
-
-  // TODO: make drag button increase stream area height
-  // attach drag button click
-  var drag = jq('#vnc-stream .dragButton');
-  if (drag.length > 0) {
-    drag.click(function(event){
-      jq('#vnc-stream').slideUp();
-      return false;
-    });
-  };
-
-  // attach form post handler
-  var form1 = jq('#vnc-stream form#stream-quick-post');
-  if (form1.length > 0) {
-    form1.submit(function(event){
-      var field = jq('[name="stream_quick_post_message"]:input', form1),
-          text = jq.trim(field.attr('value')),
-          node = field.attr('data-post-node'),
-          button = jq('[name="stream_quick_post_submit"]:input', form1);
-
-      // skip empty input
-      if (!text) {
-        field.attr('value', '');
-        return false;
-      }
-
-      // temporarily reset and disable form controls
-      field.attr('disabled', 'disabled');
-      field.attr('value', '');
-      button.attr('disabled', 'disabled');
-
-      // actually post new message to the server
-      jarnxmpp.PubSub.publish(node, '',  text, null);
-
-      // try to update vnc stream
-      setTimeout(checkVNCStream, 2000);
-
-      // activate form again
-      field.removeAttr('disabled');
-      button.removeAttr('disabled');
-
-      return false;
-    });
-  }
-}
-
-function loadVncChat(sucess_callback, error_callback) {
-    jq.ajax({
-        'url': portal_url + '/@@vnc-chat',
-        'dataType': 'html',
-        'success': function(data, textStatus, jqXHR){
-                     if (jq('#vnc-chat').length == 0) {
-                         jq('#portal-top').append(data);
-                         jq('#vnc-chat').hide();
-                         sucess_callback();
-                     }
-                   },
-      'error': function() {
-                // TODO: make smart alert only when something really goes wrong
-                //       Now we get alerts even when user reloads page before
-                //       ajax call hasn't finished
-                 // alert('Sorry, something went wrong on the server.' +
-                 //       'Please, try a bit later.');
-                 error_callback();
-               },
-      'data': {}
-      });
-};
-
-function isVncChatLoaded() {
-    return jq('#vnc-chat').length > 0;
-};
-
-function isVncChatVisible() {
-    return isVncChatLoaded() && jq('#vnc-chat').is(':visible');
-};
-
-function IMButtonHandler(vncchat) {
-    var $chat = jq('#vnc-chat');
-    if (!isVncChatLoaded()) {
-
-        loadVncChat( function () {
-          $stream = jq('#vnc-stream');
-          if ($stream.length>0 && $stream.is(':visible')) {
-              $stream.hide();
-              jq('#vnc-chat').show();
-          } else {
-            jq('#vnc-chat').slideDown();
-          }
-          runVncChat(vncchat);
-        },
-        function () {});
-
-    } else if (isVncChatVisible()) {
-        $chat.slideUp();
-    } else {
-        $stream = $('#vnc-stream')
-      if ($stream.length>0 && $stream.is(':visible')) {
-          $stream.hide();
-          $chat.show();
-      } else {
-        $chat.slideDown();
-      }
-    }
-    jq('#unread-messages').remove();
-    vncchat.unread_message_counter = 0;
-    return false;
-};
-
-function runVncChat(vncchat) {
-    var chatdata = jQuery('div#collective-xmpp-chat-data');
-    vncchat.username = chatdata.attr('username');
-    vncchat.fullname = chatdata.attr('fullname');
-    vncchat.base_url = chatdata.attr('base_url');
-
-    //// XXX: Better if configurable?
-    vncchat.connection.muc_domain = 'conference.' +  vncchat.connection.domain;
-    vncchat.rosterview = Backbone.View.extend(vncchat.VncRosterView(vncchat.roster, _, $, console));
-    vncchat.chatboxes = new vncchat.ChatBoxes();
-    vncchat.chatboxesview = new vncchat.VncChatBoxesView({
-        'model': vncchat.chatboxes
-    });
-
-    vncchat.xmppstatusview = new vncchat.XMPPStatusView({
-        'model': vncchat.xmppstatus
-    });
-
-    // Controlbox
-    controlbox = new vncchat.ControlBox({'id': 'online-users-container',
-                                          'jid': 'online-users-container'});
-    vncchat.controlbox_view = new vncchat.VncControlBoxView({
-        model: controlbox
-    });
-    vncchat.controlbox_view.render();
-};
-
-function prepareGroupChats(vncchat) {
-
-    var username = Strophe.getNodeFromJid(vncchat.connection.jid),
-        room_cookie = jQuery.cookie('joined-rooms-'+
-                      Strophe.unescapeNode(username)),
-        joined_rooms = [],
-        chat_cookie = jQuery.cookie('chats-open-'+Strophe.unescapeNode(username)),
-        open_chats = [];
-
-    if (chat_cookie) {
-        open_chats = $.map(chat_cookie.split('|'), function (el, i) {
-            return el.split(':')[0];
-        });
-    };
-
-    if (room_cookie) {
-        if (!isVncChatLoaded()){
-            loadVncChat($.proxy(function () {
-                runVncChat(this);
-                joined_rooms = room_cookie.split('|');
-                for (var i=0;i<joined_rooms.length;i++) {
-                    if (open_chats && $.inArray(joined_rooms[i], open_chats) !== -1) {
-                        continue;
-                    }
-                    vncchat.chatboxesview.openChat(joined_rooms[i]);
-                    vncchat.chatboxesview.views[joined_rooms[i]].tab.closeTab();
-                }
-            }, vncchat), function () {});
-        };
-    };
-};
-
-function initializeChatHandlers(vncchat) {
-
-    // define and register handler for subscribe request notification
-    vncchat.subscriptionNotifier = $.proxy(function(presence) {
-        presence_type = $(presence).attr('type');
-        if (!isVncChatLoaded() && presence_type == 'subscribe'){
-            //XXX What about other presence types???
-            //We need to think about users status update.
-            loadVncChat($.proxy(function () {
-                runVncChat(this);
-                this.roster.presenceHandler(presence);
-            }, this), function () {});
-            this.unread_message_counter += 1;
-            if (jq('#unread-messages').length > 0) {
-                jq('#unread-messages').remove()
-            };
-            jq('#im-messages').prepend('<span id="unread-messages">'+
-                                   this.unread_message_counter + '</span>');
-        } else {
-            this.roster.presenceHandler(presence);
-        };
-    }, vncchat);
-
-    vncchat.connection.addHandler(
-        $.proxy(function (presence) {
-            this.subscriptionNotifier(presence);
-            return true;
-        }, vncchat), null, 'presence', null);
-
-    vncchat.connection.addHandler(
-        $.proxy(function (message) {
-            if (isVncChatLoaded()){
-                this.chatboxesview.messageReceived(message);
-            } else {
-                loadVncChat($.proxy(function () {
-                    runVncChat(this);
-                    this.chatboxesview.messageReceived(message);
-                }, this), function () {});
-               }
-            if (!isVncChatVisible() && $(message)
-                  .find('composing').length == 0) {
-                this.unread_message_counter += 1;
-                if (jq('#unread-messages').length > 0) {
-                    jq('#unread-messages').remove()
-                };
-                jq('#im-messages').prepend('<span id="unread-messages">'+
-                    this.unread_message_counter + '</span>');
-            };
-            return true;
-        }, vncchat), null, 'message', 'chat');
-
-    vncchat.connection.addHandler(
-        $.proxy(function (invitation) {
-            if (isVncChatLoaded()){
-                this.controlbox_view.roomspanel.invitationReceived(invitation);
-            } else {
-                loadVncChat($.proxy(function () {
-                    runVncChat(this);
-                    this.controlbox_view
-                        .roomspanel.invitationReceived(invitation);
-                }, this), function () {});
-            };
-            return true;
-         }, vncchat), 'http://jabber.org/protocol/muc#user', 'message', null);
-
-
-    vncchat.connection.addHandler($.proxy(function(stanza) {
-        from = stanza.getAttribute('from');
-        if (!isVncChatLoaded()){
-            loadVncChat($.proxy(function () {
-                runVncChat(this);
-                this.chatboxesview.messageReceived(stanza);
-            }, this), function () {});
-        };
-        if (!isVncChatVisible()) {
-                this.unread_message_counter += 1;
-                if (jq('#unread-messages').length > 0) {
-                        jq('#unread-messages').remove()
-                };
-            jq('#im-messages').prepend('<span id="unread-messages">'+
-                    this.unread_message_counter + '</span>');
-        };
-        return true;
-    }, vncchat), null, 'message', 'groupchat');
-}
-function initializeChat(vncchat) {
-    $(document).unbind('jarnxmpp.connected');
-    $(document).bind('jarnxmpp.connected', $.proxy(function () {
-
-        this.connection.bare_jid = Strophe.getBareJidFromJid(this.connection.jid);
-        this.connection.domain = Strophe.getDomainFromJid(this.connection.jid);
-        this.connection.xmlInput = function (body) { console.log(body); };
-        this.connection.xmlOutput = function (body) { console.log(body); };
-
-        // show chat control
-        jq('#im-messages').show();
-        this.unread_message_counter = 0
-
-        // initialize roster and message handlers
-        this.roster = this.VncRoster(_, $, console);
-        this.connection.roster.registerCallback(this.roster.rosterHandler);
-        initializeChatHandlers(vncchat);
-
-        this.roster.getRoster($.proxy(function (items) {
-                 this.roster.rosterHandler(items);
-                 prepareGroupChats(vncchat);
-             }, this));
-
-        //Let's tell everyone that we are online ;)
-        this.xmppstatus = new this.XMPPStatus();
-        this.xmppstatus.sendPresence();
-
-    },vncchat))
-}
-
-function attachIMButton(vncchat) {
-  jq('#im-messages').click(function(event) {
-    event.preventDefault();
-    IMButtonHandler(vncchat);
-  });
-};
-
-function setupVncChat() {
-    if (jq('#im-messages').length == 0) {
-        return false;
-    };
-    initializeChat(vncchat);
-    attachIMButton(vncchat);
-};
-
-function rebindPubSubStreamHandlers () {
-    $(document).bind('jarnxmpp.connected', function () {
-        Strophe.addNamespace('PUBSUB', 'http://jabber.org/protocol/pubsub');
-        // PubSub
-        jarnxmpp.connection.addHandler(jarnxmpp.PubSub.eventReceived, null, 'message', null, null, jarnxmpp.pubsub_jid);
-        jarnxmpp.connection.addHandler(jarnxmpp.Roster.rosterSuggestedItem, 'http://jabber.org/protocol/rosterx', 'message', null);
-        jarnxmpp.connection.send($pres());
-
-        // Load stream.
-        $('.pubsubNode').each(function () {
-            // If this doesn't have a data-node it must a personal stream.
-            if (!$(this).attr('data-node')) {
-                var $node = $(this);
-                jarnxmpp.Storage.xmppSet('last_read_stream_on', jarnxmpp.PubSub._ISODateString(new Date()));
-                jarnxmpp.PubSub.getSubscriptions(function (following) {
-                    $node.attr('data-node', following.join(' '));
-                    $.ajax({url: portal_url + '/@@pubsub-items',
-                        data: {nodes: following},
-                        dataType: 'html',
-                        traditional: true,
-                        cache: false,
-                        success: function (data) {
-                            $node.hide();
-                            $node.html(data);
-                            $node.magicLinks();
-                            $('.prettyDate', $node).prettyDate();
-                            $node.slideDown("slow");
-                        }});
-                });
-            }
-        });
-    });
-
-};
-
-
 //
 // animateContentWizardStep
 //
@@ -1210,11 +723,7 @@ jq(function() {
   initNewTicketForm();
   initLanguageSelector();
   attachSocialBookmarksLink();
-  attachStreamButton();
-  attachStreamActions();
   initSearchTooltip();
-  setupVncChat();
-  rebindPubSubStreamHandlers();
   setHandlersWizard();
   addDocumentContentShadows();
   fixGeneralUI();
