@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <object name="portal_javascripts">
   <!-- Disabled scripts -->
-  <javascript enabled="False"
+  <javascript enabled="False" remove="True"
     id="++resource++jarn.xmpp.collaboration.js/jquery.ba-dotimeout.min.js" />
-  <javascript enabled="False"
+  <javascript enabled="False" remove="True"
     id="++resource++jarn.xmpp.collaboration.js/diff_match_patch.js" />
-  <javascript enabled="False"
+  <javascript enabled="False" remove="True"
     id="++resource++jarn.xmpp.collaboration.js/jarnxmpp.collaboration.protocol.js" />
-  <javascript enabled="False"
+  <javascript enabled="False" remove="True"
     id="++resource++jarn.xmpp.collaboration.js/jarnxmpp.collaboration.collaborate.js" />
   <javascript id="jquery.js"
               enabled="False" />
@@ -26,19 +26,17 @@
               enabled="True" />
   <javascript id="++resource++vnccollab.theme.js/jquery.markitup.js"
               enabled="True" />
-    <javascript
+  <javascript
       id="++resource++vnccollab.theme.js/vnc_chat.js"
-      insert-after="++resource++collective.xmpp.chat.javascripts/converse.js"
-      authenticated="True"/>
+      remove="True" />
   <javascript id="++resource++vnccollab.theme.js/helpers.js"
               enabled="True" />
   <javascript id="++resource++vnccollab.theme.js/fileuploader.js"
               enabled="True" />
   <javascript id="++resource++vnccollab.theme.js/main.js"
-              insert-after="++resource++vnccollab.theme.js/vnc_chat.js"
               enabled="True" />
   <javascript id="++resource++vnccollab.theme.js/jquery.blockUI.js"
-              insert-before="++resource++vnccollab.theme.js/vnc_chat.js"
+              insert-before="++resource++vnccollab.theme.js/main.js"
               enabled="True" />
   <javascript id="++resource++plone.formwidget.autocomplete/jquery.autocomplete.min.js"
               enabled="False" />
