@@ -27,7 +27,6 @@
     <viewlet name="vnccollab.theme.addbutton"/>
     <viewlet name="plone.searchbox"/>
     <viewlet name="plone.global_sections"/>
-    <viewlet name="jarn.xmpp.core.ui"/>
     <viewlet name="vnccollab.theme.languageselector"/>
     <viewlet name="vnccollab.theme.toptabs"/>
     <viewlet name="plone.path_bar"/>
@@ -49,7 +48,6 @@
   <hidden manager="plone.portalheader" skinname="VNC Collaboration Theme">
     <viewlet name="plone.app.i18n.locales.languageselector"/>
     <viewlet name="vnccollab.theme.languageselector"/>
-    <viewlet name="jarn.xmpp.core.ui"/>
     <viewlet name="plone.global_sections"/>
   </hidden>
   <hidden manager="plone.abovecontent" skinname="VNC Collaboration Theme">
